Extend introduction and clean Task notebooks

--- a/Intro to Python.ipynb
+++ b/Intro to Python.ipynb
@@ -32,7 +32,7 @@
     "1 + \\\n",
     "   2 + 3 # this is also OK\n",
     "```\n",
-    "The jupyter notebook system for writting Python intersperses text (like this) with Python statements. Try typing something into the cell (box) below and press the 'run cell' button above (triangle+line symbol) to execute it."
+    "The jupyter notebook system for writting Python intersperses text (like this) with Python statements. Try typing something into the cell (box) below and press the 'run cell' button above (triangle+line symbol) to execute it. Alternatively, you can use the handy shortcut"
    ]
   },
   {
