Add problems and cleaned all notebooks

--- a/Problems/Task 3.ipynb
+++ b/Problems/Task 3.ipynb
@@ -59,26 +59,28 @@
     "    dt = 0.1\n",
     "    xi = 18.849\n",
     "    springk = 1.0\n",
-    "    nstd1 = np.sqrt(2.*T1*dt/xi)\n",
-    "    nstd2 = np.sqrt(2.*T2*dt/xi)\n",
-    "    \n",
+    "  \n",
     "    # initialise positions of beads\n",
     "    x1, x2 = 0., 0.\n",
     "    \n",
     "    data = []\n",
     "    \n",
-    "    # Get random number between 0 and 1\n",
-    "    noise_T1 = np.random.normal(loc=0., scale=nstd1, size=steps)\n",
-    "    noise_T2 = np.random.normal(loc=0., scale=nstd2, size=steps)\n",
-    "\n",
+    "      # initialise positions of beads\n",
+    "    x1, x2 = 0., 0.\n",
+    "    \n",
+    "    data = []\n",
+    "    \n",
+    "    # TODO generate noise\n",
+    "    \n",
     "    # Time loop\n",
     "    for ti in range(steps):\n",
-    "        x1 += springk*(x2-2*x1)*dt/xi + noise_T1[ti]\n",
-    "        x2 += springk*(x1-2*x2)*dt/xi + noise_T2[ti]\n",
+    "        x1 += # Fill in integration\n",
+    "        x2 += # Fill in integration\n",
     "        \n",
     "        data.append((x1, x2))\n",
     "        \n",
-    "    return np.array(data)\n"
+    "    return np.array(data)      \n",
+    "    \n"
    ]
   },
   {
@@ -101,35 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(data.T[0], label=r\"$x_1$\")\n",
-    "plt.plot(data.T[1], label=r\"$x_2$\")\n",
-    "\n",
-    "plt.xlabel(\"t\")\n",
-    "plt.ylabel(\"x\")\n",
-    "plt.legend()"
+    "# Todo plot trajectory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "binnum = 50\n",
-    "bins = np.linspace(-4, 4, binnum + 1)\n",
-    "\n",
-    "hist = plt.hist(data.T[0], label=r\"$x_1$\", bins=bins, alpha=0.8)\n",
-    "plt.hist(data.T[1], label=r\"$x_2$\", bins=bins, alpha=0.8)\n",
-    "plt.hist((data.T[0] + data.T[1])/2.0, label=r\"cm\", bins=bins, alpha=0.8)\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"N\")\n",
-    "plt.legend()"
+    "# Todo plot histogram"
    ]
   },
   {
