--- a/Solutions/Intro to Python.ipynb
+++ b/Solutions/Intro to Python.ipynb
@@ -32,7 +32,8 @@
     "1 + \\\n",
     "   2 + 3 # this is also OK\n",
     "```\n",
-    "The jupyter notebook system for writting Python intersperses text (like this) with Python statements. Try typing something into the cell (box) below and press the 'run cell' button above (triangle+line symbol) to execute it."
+    "The jupyter notebook system for writting Python intersperses text (like this) with Python statements. Try typing something into the cell (box) below and press the 'run cell' button above (triangle+line symbol) to execute it.  \n",
+    "Alternatively, you can use the handy keyboard shortcut `Shift-Return`. A list of keyboard sortcurts can be found in the `Help` menu above."
    ]
   },
   {
@@ -523,7 +524,98 @@
    "outputs": [],
    "source": [
     "x.append(\"beholder\")\n",
+    "x.append(12) # lists can contain elements of different types\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing\n",
+    "\n",
+    "Slices of lists can be selected by the slicing operator `x[start:end:step]`, where `start` and `end` define the first and last element. The `step` argument is optional. It defines the number of elements to skip over."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select all elements with an even index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[::2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select all elements with an odd index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[1::2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Invert the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loops are used to execute a statement several times. In particular, they can be used to iterate over the elements in a `list`. We will use it here to print each element of the list `x` into their own line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for elem in x:\n",
+    "    print(elem)"
    ]
   },
   {
@@ -723,6 +815,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.arange(start=1, stop=5, step=0.5) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -801,6 +902,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The shape of an array can be evaluated via:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can change this behavious with the `axis` argument. "
    ]
   },
@@ -832,7 +949,15 @@
     "print(r)\n",
     "print()\n",
     "print(r[:, 0]) # Print first column of r\n",
-    "print(r[0, :]) # Print first row of r\n"
+    "print(r[0, :]) # Print first row of r\n",
+    "print(r[0, 1:4]) # Print the 2nd to 4th entry of the first row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpy functions and their clever combination are a powerful tool for data analysis. They help to avoid slow and complex loops which leads to faster and often more readable code. Since we cannot introduce all `numpy` functions here, we encourage you to take a brief look at the offical [numpy documentation](http://www.matplotlib.org/docs). Many function work in a similiar way as the ones that are introduced here. "
    ]
   },
   {
@@ -864,12 +989,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib has the concept of a `figure` which can contain several coordinate-systems calles `axes`. Here, we will restrict ourselves to figures with only one main axis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "plt.plot(x, y)"
+    "fig, ax = plt.subplots() # Initialize a new figure with one axis\n",
+    "ax.plot(x, y) # Plot a line with coordinates x, y in this axis"
    ]
   },
   {
@@ -885,15 +1020,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots()\n",
     "y = np.random.randn(10000)\n",
-    "_ = plt.hist(y, bins=80, normed=True)"
+    "_ = ax.hist(y, bins=80, density=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And even 2D plots"
+    "And even a 2D histogram."
    ]
   },
   {
@@ -902,10 +1038,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots()\n",
     "x = np.random.randn(100000)\n",
     "y = np.random.randn(100000)\n",
-    "_ = plt.hist2d(x, y, bins=80, normed=True)\n",
-    "plt.colorbar()"
+    "hist, xedges, yedges, image = ax.hist2d(x, y, bins=80, normed=True)\n",
+    "plt.colorbar(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again we encourage you to have a look at the offical [matplotlib plotting documentation](https://matplotlib.org/api/pyplot_summary.html) and the [example gallery](https://matplotlib.org/gallery/index.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Power jupyter notebook user tip of the day\n",
+    "\n",
+    "Adding a `?` to then end of any function will provide you with a short help window.  \n",
+    "Task: Try to change the normalisation of the histogram above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax.hist2d?"
    ]
   }
  ],
