--- a/Problems/Task 3.ipynb
+++ b/Problems/Task 3.ipynb
@@ -43,7 +43,7 @@
     "- friction coefficent $\\zeta=18.849$\n",
     "- timestep $dt=0.1$\n",
     "\n",
-    "The beats should be couppled to heat bathes with two different tempratures T1 and T2. The noises $\\Gamma_1$ and $\\Gamma_2$ follow a normal distribution with zero mean and variance $\\sigma = 2k_B T_1 \\tau/\\zeta$.\n",
+    "The beats should be couppled to heat bathes with two different tempratures T1 and T2. The noises $\\Gamma_1$ and $\\Gamma_2$ follow a normal distribution with zero mean and variance $\\sigma^2 = 2k_B T_1 \\tau/\\zeta$.\n",
     "\n",
     "Hint: Calculate first the noise array. Then use a for loop to integrate the dynamamics of the beats. Save the position of each bead as a position touple in a list, e.g. data = [($x_1^0$, $x_2^0$), ($x_1^1$, $x_2^1$), ($x_1^t$, $x_2^t$ )]"
    ]
