Fix comment in Task 1

--- a/Problems/Task 1.ipynb
+++ b/Problems/Task 1.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use np.choice and np.cumsum"
+    "# Use np.random.choice and np.cumsum"
    ]
   },
   {
